<resources>
    <string name="app_name">Quwi.Projects</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="project_logo">Project logo</string>
    <string name="project_name">Project Name</string>
    <string name="active">Active?</string>
    <string name="edit_project_name">Project Name</string>
    <string name="save">Save</string>
    <string name="project_name_hint">Project Name</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_project_name">Empty name</string>
    <string name="loading">Loading...</string>
    <string name="project_list">Project List</string>
    <string name="project_details">Project Details</string>
    <string name="sign_in_title">Sign In</string>
    <string name="edit_project_name_title">Edit Project Name</string>
</resources>