<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editprojectdialog.EditProjectNameFragment">

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text_size"
        android:gravity="start"
        android:text="@string/edit_project_name"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_title"
        android:layout_margin="@dimen/small_margin"
        tools:test="project name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_project_name" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_project_name" />


</androidx.constraintlayout.widget.ConstraintLayout>