<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.projectdetails.DetailsFragment">

    <ImageView
        android:id="@+id/project_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/project_logo_placeholder"
        android:contentDescription="@string/project_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/project_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:layout_margin="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/project_logo" />

    <TextView
        android:id="@+id/project_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_name_button"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/project_logo"
        tools:text="Project Name" />

    <ImageButton
        android:id="@+id/edit_name_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/edit_project_name"
        android:foregroundGravity="center_vertical"
        android:scaleType="fitCenter"
        android:src="@drawable/edit_button"
        app:layout_constraintBottom_toBottomOf="@+id/project_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_logo" />

    <TextView
        android:id="@+id/project_active_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:layout_margin="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/project_name" />

    <TextView
        android:id="@+id/project_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Yup"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/project_name" />

</androidx.constraintlayout.widget.ConstraintLayout>